--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,12 +15,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 1.8
+    -
+      uses: actions/checkout@v3
+    -
+      name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: '1.8'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
+    -
+      name: Build with Maven
       run: mvn clean install
+    -
+      uses: mr-smithers-excellent/docker-build-push@v5
+      name: Build & push Docker image
+      with:
+        image: aprilhucode/springboot-docker-demo
+        tags: latest
+        registry: docker.io
+        dockerfile: Dockerfile.ci
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
