--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,9 @@ jobs:
       name: Build with Maven
       run: mvn clean install
     -
+      name: Run tests
+      run: mvn test
+    -
       uses: mr-smithers-excellent/docker-build-push@v5
       name: Build & push Docker image
       with:
